Bug 324487 - in Preferences > Transparency Checkboxes the 'color' doesn't work
Summary: in Preferences > Transparency Checkboxes the 'color' doesn't work
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-04 11:14 UTC by David REVOY
Modified: 2013-09-28 12:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot of the issue. Color selected is Pink , checkboxes are white+grey25% (176.18 KB, image/png)
2013-09-04 11:14 UTC, David REVOY
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2013-09-04 11:14:39 UTC
Created attachment 82148 [details]
screenshot of the issue. Color selected is Pink , checkboxes are white+grey25%

The bug affect 'color' selection in Preferences > Transparency Checkboxes
If you set a color and press ok , the canvas doesn't reflect the change.  Size works well. 

Also, I would expect the color selected to be the bright tone of the checker (ex: default=white ) ; and the second darker tone be computed relatively ( ex: - 25% value ).
Comment 1 Halla Rempt 2013-09-04 11:18:23 UTC
For the qpainter canvas, the change is reflected immediately, for the opengl canvas only when we create a new opengl canvas.
Comment 2 Halla Rempt 2013-09-28 11:08:29 UTC
Git commit a7eaeeb5c5a8b77855b1cf554f5baafb7582630c by Boudewijn Rempt.
Committed on 28/09/2013 at 11:07.
Pushed by rempt into branch 'master'.

Allow the check colors to be configured independently

And make opengl canvas update the check texture when the config changes.

M  +5    -4    krita/ui/canvas/kis_canvas_widget_base.cpp
M  +6    -3    krita/ui/dialogs/kis_dlg_preferences.cc
M  +29   -26   krita/ui/forms/wdgdisplaysettings.ui
M  +12   -2    krita/ui/kis_config.cc
M  +6    -2    krita/ui/kis_config.h
M  +3    -0    krita/ui/opengl/kis_opengl_canvas2.cpp

http://commits.kde.org/calligra/a7eaeeb5c5a8b77855b1cf554f5baafb7582630c
Comment 3 David REVOY 2013-09-28 12:08:08 UTC
Nice, thanks ! I updated and see the options.  I can't test due to a a bug I just added ( Bug 325387 ) but as soon as it will be possible I 'll do.
Comment 4 David REVOY 2013-09-28 12:59:41 UTC
Thanks Boud for fixing this fast Bug 325387  ; so I could test the two colors new setup option. They work well ; exept the 2 boxes on the preferences panel always reset to both same color. 

To reproduce :
1. Open the preferences; change the 2 checkbox colors ; all is fine ; Press Ok
2. Erase a bit the flat canvas to see the effect ; transparency checker is similar as  2 checkbox colors
3. Re-Open preferences :  #bug# the 2 checkbox colors have similar color. 
4. If user press ok ; transparency checker become a flat color.  ( so, it force user to setup it each time something in 'Preferences > Display' is changed )