Allow the check colors to be configured independently

And make opengl canvas update the check texture when the config changes.

BUG:324487