krita/ui/opengl/kis_opengl_canvas2.cpp
@@ -473,6 +473,9 @@ void KisOpenGLCanvas2::initializeDisplayShader()
 
 void KisOpenGLCanvas2::slotConfigChanged()
 {
+    KisConfig cfg;
+    d->openGLImageTextures->generateCheckerTexture(createCheckersImage(cfg.checkSize()));
+
     notifyConfigChanged();
 }
 
